Test/Nat/Max.expected
goal: x ≤ Max x y ∧ y ≤ Max x y

query:
(define-sort Nat () Int)
(declare-const x Nat)
(assert (>= x 0))
(declare-const y Nat)
(assert (>= y 0))
(declare-fun Max (Nat Nat) Nat)
(assert (forall ((_uniq.195 Nat)) (=> (>= _uniq.195 0) (forall ((_uniq.196 Nat)) (=> (>= _uniq.196 0) (>= (Max _uniq.195 _uniq.196) 0))))))
(assert (not (and (<= x (Max x y)) (<= y (Max x y)))))
(check-sat)

result: unknown
Test/Nat/Max.lean:12:2: error: unable to prove goal
goal: x ≤ Max x y ∧ y ≤ Max x y

query:
(define-sort Nat () Int)
(declare-const x Nat)
(assert (>= x 0))
(declare-const y Nat)
(assert (>= y 0))
(define-fun Max ((x Nat) (y Nat)) Nat (ite (<= x y) y x))
(assert (forall ((_uniq.236 Nat)) (=> (>= _uniq.236 0) (forall ((_uniq.237 Nat)) (=> (>= _uniq.237 0) (>= (Max _uniq.236 _uniq.237) 0))))))
(assert (not (and (<= x (Max x y)) (<= y (Max x y)))))
(check-sat)

result: unsat
